<resources>
    <string name="app_name">ПасКонтроль</string>

    <!--Main Screen-->
    <string name="date">Дата:</string>
    <string name="time">Час:</string>
    <string name="transport">Оберіть вид транспорту:</string>
    <string name="route">Номер маршруту:</string>
    <string name="board_number">Бортовий номер:</string>
    <string name="how_get_number">Як дізнатися бортовий номер?</string>
    <string name="how_get_number_text">Бортовий номер вказаний біля кабіни водія або ззовні на рухомому складі.\nПереважно складається з 4 цифр.</string>
    <string name="issues">Недоліки</string>
    <string name="mail_subject">Відгук щодо роботи транспорту #</string>
    <string name="transport_type">Вид транспорту:</string>
    <string name="enter_comment">Додайте коментарі</string>
    <string name="enter_number">#0000</string>
    <string name="enter_route">#000</string>
    <string name="choose_one">Оберіть один з недоліків</string>
    <string name="share">Поділитись</string>
    <string name="share_text">Сформувати відгук щодо роботи міського транспорту тепер набагато простіше з мобільним додатком! \n</string>
    <string name="title_choose">Оберіть недоліки</string>

    <string name="bus">Автобус</string>
    <string name="trolleybus">Тролейбус</string>
    <string name="tram">Трамвай</string>

    <!--Issues-->
    <string name="point_1">Транспорт брудний ззовні</string>
    <string name="point_2">Брудно всередині транспорту</string>
    <string name="point_3">Не вказані номер маршуту та кінцеві зупинки зовні транспорту</string>
    <string name="point_4">Пошкоджені пасажирські сидіння</string>
    <string name="point_5">Несправне освітлення у салоні</string>
    <string name="point_6">Не працює компостер (Зламаний або відсутній)</string>
    <string name="point_7">Некоректна поведінка водія</string>
    <string name="point_8">Зупинки не оголошуються</string>
    <string name="point_9">Водій не видав квиток</string>
    <string name="point_10">Некоректна поведінка кондуктора</string>
    <string name="point_11">Кондуктор не видав квиток</string>
    <string name="point_12">Поганий технічний стан транспорту</string>
    <string name="point_13">Транспорт не вийшов на маршрут</string>
    <string name="point_14">Інше (вкажіть недолік у полі коментарів перед формуванням листа)</string>

    <!--Issues to KPT-->
    <string name="p_1" translatable="false">1. Незадовільний санітарний стан рухомого складу зовні</string>
    <string name="p_2" translatable="false">2. Незадовільний санітарний стан в салоні рухомого складу</string>
    <string name="p_3" translatable="false">3. Відсутність стандартних маршрутних покажчиків на рухомому складі (№ маршруту, кінцеві пункти)</string>
    <string name="p_4" translatable="false">4. Наявність пошкоджених пасажирських сидінь</string>
    <string name="p_5" translatable="false">5. Наявність несправного освітлення салону</string>
    <string name="p_6" translatable="false">6. Наявність несправного компостера</string>
    <string name="p_7" translatable="false">7. Некоректна поведінка водія</string>
    <string name="p_8" translatable="false">8. Не оголошення зупинок громадського транспорту</string>
    <string name="p_9" translatable="false">9. Невидача квитків водієм</string>
    <string name="p_10" translatable="false">10. Некоректна поведінка кондуктора</string>
    <string name="p_11" translatable="false">11. Невидача квитків кондуктором</string>
    <string name="p_12" translatable="false">12. Незадовільний технічний стан рухомого складу</string>
    <string name="p_13" translatable="false">13. Транспорт не вийшов на маршрут</string>
    <string name="p_14" translatable="false">14. Інше (вкажіть недолік у полі коментарів перед формуванням листа)</string>

    <!--Feedback-->
    <string name="other">Інше:</string>
    <string name="other_input_field">Будь ласка, вкажіть причину…</string>

    <!--Final Screen-->
    <string name="generate_mail">Сформувати листа</string>
    <string name="cancel">Очистити</string>
    <string name="comments">Коментарі:</string>
    <string name="phone_number">+38 050 332 01 23</string>
    <string name="email">monitoring@kpt.kiev.ua</string>


    <!--Common Strings-->
    <string name="forward">Далі</string>
    <string name="back">Назад</string>
    <string name="error_empty_field">Поле не має бути порожнім</string>
    <string name="ua">Українська</string>
    <string name="ru">Російська</string>
    <string name="en">Англійська</string>
    <string name="thank_you">Дякую що ви не байдужі!</string>


    <!--Content Description-->
    <string name="cd_calendar">Календар</string>
    <string name="cd_time">Годинник</string>

    <!--Fabric-->
    <string name="event_transport" translatable="false">Chosen Transport</string>
    <string name="event_transport_type" translatable="false">Transport Type</string>
    <string name="event_go_to_issues" translatable="false">Go to Issues button</string>
    <string name="event_go_to_final" translatable="false">Go to Final Screen button</string>
    <string name="event_go_to_final_arrow" translatable="false">Go to Final Screen via Arrow</string>


    <!--Ads-->
    <string name="ads_mobile_id">ca-app-pub-1227764705187744~5637028893</string>
    <string name="ads_banner"> ca-app-pub-1227764705187744/5604760375</string>
    <!--test-->
    <!--<string name="ads_banner">ca-app-pub-3940256099942544/6300978111</string>-->



</resources>
